# cnc-gui

./: Cargo.toml  README.md  test.nc
src/: gcode.rs  gcode_renderer.rs  grbl.rs  imgui_renderer.rs  main.rs  rendering.rs  simulation.rs  ui.rs  util.rs  viewport.rs  visuals.rs
src/grammars/: gcode.pest  grbl.pest
src/grbl/: connection.rs  error.rs  gcode_task.rs  msgs.rs  state.rs
src/shaders/: line.frag  line.vert
