[package]
name = "cnc_gui"
version = "0.1.0"
authors = ["Sam Blazes <blazes.sam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath                    = {version = "0.17.0", features = ["serde"]}
bitflags                  = {version = "1.2.1"}
regex                     = {version = "1.4.2"}
bytes                     = {version = "1.0.1"}
rand                      = {version = "0.8.3"}

pest                      = {version = "2.1.3"}
pest_derive               = {version = "2.1.0"}
pest_consume              = {version = "1.0.6"}

tokio                     = {version = "1", features = ["full"]}
tokio-util                = {version = "0.6.6", features = ["full"]}

serialport                = {version = "4.0.1"}

winit                     = {version = "0.24.0"}
winit_input_helper        = {version = "0.9.0"}
nfd                       = {version = "0.0"}

gfx                       = {version = "0.18"}
gfx_device_gl             = {version = "0.16"}
glutin                    = {version = "0.26"}
old_school_gfx_glutin_ext = {version = "0.26"}

image                     = {version = "0.23"}
imgui                     = {version = "0.7"}
imgui-gfx-renderer        = {version = "0.7"}
imgui-winit-support       = {version = "0.7"}

stretch                   = {version = "0.3"}